--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="email">Email Id</string>
+    <string name="email">Email</string>
     <string name="passowrd">Password</string>
     <string name="login">LOGIN</string>
     <string name="show_pwd">Show Password</string>
@@ -14,7 +14,7 @@
     <string name="newUser">Not a Member yet? Sign Up here.</string>
     <string name="fullName">Full Name</string>
     <string name="mobileNumber">Mobile Number</string>
-    <string name="location">Location</string>
+    <string name="birthdate">Birthdate</string>
     <string name="confirmPassword">Confirm Password</string>
     <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
     <string name="signUp">SIGN UP</string>
@@ -22,5 +22,17 @@
     <string name="registered_emailid">Please enter your Registered Email Id below:</string>
     <string name="submit">SUBMIT</string>
     <string name="back">BACK</string>
+    <string name="CompleteProfile">Please Complete your Profile</string>
 
+     <!-- ERROR MESSAGES-->
+     <string name="NoSuchUser">Such user does not exist</string>
+     <string name="NetworkConnectionFailure">Something went wrong please try again later</string>
+     <string name="InvalidEmail">Your Email Id is Invalid</string>
+     <string name="Enterbothcredentials">Enter both credentials</string>
+     <string name="AllFieldsRequired">All fields are required</string>
+     <string name="PasswordsDontMatch">Both passwords do not match</string>
+     <string name="SelectTermsAndConditions">Please select Terms and Conditions</string>
+     <string name="UserAlreadyExists">A user with such email already exist</string>
+     <!-- SUCCESS MESSAGES -->
+      <string name="HoldOn">Please hold on</string>
 </resources>
